[package]
name = "makecab"
description = "Create a limited subset of Microsoft cabinet files"
version = "0.1.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "cc0"

[dependencies]
cab = "0.3"
chrono = "0.4"
clap = "2.3.0"
error-chain = { version = "0.7.2", default-features = false }
filetime = "0.1"

[patch.crates-io]
flate2 = { git = "https://github.com/rust-lang/flate2-rs", rev = "1.0.25" }
once_cell = { git = "https://github.com/matklad/once_cell.git", rev = "v1.12.0" }

[dev-dependencies]
tempdir = "0.3.4"

[profile.release]
debug = true

[workspace]
